# railroute

./: .gitignore  PROJECT_PROGRESS.md  README.md
backend/: README.md  pyproject.toml  schema.sql  seed_db.py
backend/app/: database.py  main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: auth.py  health.py  search.py  stations.py  watchlist.py
backend/app/core/: config.py  graph.py
backend/app/models/: rail.py
backend/app/repositories/: pg_rail_repository.py  rail_repository.py
backend/app/schemas/: auth.py  search.py  station.py  watchlist.py
backend/app/services/: route_service.py  station_service.py
backend/railroute_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_routes.py  test_route_service.py  test_station_service.py
frontend/: next.config.ts  package.json
frontend/app/login/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: filter-panel.tsx  navbar.tsx  search-form.tsx  segment-timeline.tsx
frontend/lib/: api.ts
frontend/railroute-frontend/: package-lock.json
frontend/railroute-frontend/app/: globals.css  layout.tsx
frontend/railroute-frontend/app/signup/: page.tsx
frontend/railroute-frontend/app/watchlist/: page.tsx
frontend/railroute-frontend/components/: availability-indicator.tsx  footer.tsx  hero-section.tsx  route-card.tsx  station-selector.tsx  train-badge.tsx
frontend/railroute-frontend/lib/: format.ts  types.ts
frontend/railroute-frontend/store/: search-store.ts
